2024-08-19T12:38:59Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/10453512156 # 477
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2024-08-19
* notice: last 14d: unq all: 19 26
* notice: prev accum: outdated-unq outdated-all / unq all: 3661 8220 / 3683 8246
* notice: next accum: outdated-unq outdated-all / unq all: 3662 8221 / 3684 8247
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2024-08-05] / [2024-08-19]

2024-08-19T01:36:44Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/10445618536 # 476
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2024-08-19
* notice: last 14d: unq all: 19 26
* notice: prev accum: outdated-unq outdated-all / unq all: 3661 8220 / 3679 8240
* notice: next accum: outdated-unq outdated-all / unq all: 3661 8220 / 3683 8246
* notice: prev exec diff / last date diff / accum: unq all: +4 +6 -0 -0 / +6 +8 -0 -0 / 6 8
* notice: removed / changed dates: [] / [2024-08-18]

2024-08-18T12:38:01Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/10440667686 # 475
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2024-08-18
* notice: last 14d: unq all: 16 20
* notice: prev accum: outdated-unq outdated-all / unq all: 3661 8220 / 3677 8238
* notice: next accum: outdated-unq outdated-all / unq all: 3661 8220 / 3679 8240
* notice: prev exec diff / last date diff / accum: unq all: +2 +2 -0 -0 / +2 +2 -0 -0 / 2 2
* notice: removed / changed dates: [] / [2024-08-18]

2024-08-17T12:35:15Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/10432288753 # 473