@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2024-08-19T12:38:59Z",
+  "timestamp" : "2024-08-20T01:34:11Z",
   "count_outdated" : 8221,
   "uniques_outdated" : 3662,
-  "count" : 8247,
-  "uniques" : 3684,
+  "count" : 8248,
+  "uniques" : 3685,
   "clones" : [
     {
       "timestamp": "2024-08-07T00:00:00Z",
@@ -79,12 +79,12 @@
     },
     {
       "timestamp": "2024-08-19T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
+      "count_decinc": [ 0, 2 ],
+      "uniques": 2,
+      "uniques_minmax": [ 1, 2 ],
+      "uniques_decinc": [ 0, 2 ]
     }
   ]
 }
