@@ -1,5 +1,5 @@
 {
-  "count": 26,
+  "count": 27,
   "uniques": 19,
   "clones": [
     {
@@ -44,8 +44,8 @@
     },
     {
       "timestamp": "2024-08-19T00:00:00Z",
-      "count": 1,
-      "uniques": 1
+      "count": 2,
+      "uniques": 2
     }
   ]
 }
