@@ -1,3 +1,12 @@
+2024-08-20T01:34:11Z:
+* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/10463734221 # 478
+* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2024-08-20
+* notice: last 14d: unq all: 19 27
+* notice: prev accum: outdated-unq outdated-all / unq all: 3662 8221 / 3684 8247
+* notice: next accum: outdated-unq outdated-all / unq all: 3662 8221 / 3685 8248
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +2 +2 -0 -0 / 2 2
+* notice: removed / changed dates: [] / [2024-08-19]
+
 2024-08-19T12:38:59Z:
 * notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/10453512156 # 477
 * notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2024-08-19
